[package]
name = "tts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking","json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
sapi-lite = "0.1.1"
druid = "0.7.0"
#eframe = "0.19.0"
